# sefar

./: Cargo.toml  README.MD  README.md
src/: common.rs  lib.rs
src/algos/: apgsk.rs  bieo.rs  eao.rs  eo.rs  go.rs  gsk.rs  hses.rs  lshade_spacma.rs  meo.rs  mod.rs  pco.rs  pso.rs  qago.rs
src/algos/eo/: bieo.rs  eo.rs  ieo.rs  meo.rs  mieo.rs  mod.rs
src/algos/gsk/: gsk.rs  mod.rs  para_gsk.rs
src/benchmarks/: functions.rs
src/core/: eoa.rs  genome.rs  mod.rs  optimization_result.rs  parameters.rs  problem.rs
src/parallel/: mod.rs  para_meo.rs
src/parallel_algos/: para_meo.rs
src/sequential/: go.rs  meo.rs
src/sequential_algos/: eo.rs  eo_params.rs  go.rs  meo.rs  mod.rs  pco.rs  pso.rs  qago.rs
