[package]
name = "sefar"
version = "0.1.0"
edition = "2021"
#authors = {"Saad Dahmani <sd.dahmani2000>"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand ="0.8.5"
rand_distr = "0.4.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"]}
rayon ="1.6.1"

[features]
report = []
binary = []
#deep_report = [report]
