[package]
name = "sefar"
version = "0.2.1"
edition = "2021"
authors = ["Saad Dahmani <sd.dahmani2000@gmail.com>"]
description = "sefar is library for evolutionary optimization algorithms."
keywords = ["optimization", "metaheuristic", "evolutionary", "algorithm"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
thiserror = "2.0.12"

[features]
#report = []
parallel = []
#deep_report = [report]
